k8s/minikube/endpoint.yaml
apiVersion: v1
kind: Service
metadata:
  name: intercom-help-center
  annotations:
    ingress.appscode.com/use-dns-resolver: "true"
    ingress.appscode.com/dns-resolver-nameservers: '["8.8.8.8:53", "8.8.4.4:53"]'
spec:
  externalName: custom.intercom.help
  type: ExternalName
